8233530: gcc 5.4 build warning -Wc++14-compat after JDK-8233359

Reviewed-by: dholmes, goetz