src/hotspot/share/memory/operator_new.cpp
@@ -89,6 +89,12 @@ void operator delete [](void* p) throw() {
   fatal("Should not call global delete []");
 }
 
+#ifdef __GNUG__
+// Warning disabled for gcc 5.4
+PRAGMA_DIAG_PUSH
+PRAGMA_DISABLE_GCC_WARNING("-Wc++14-compat")
+#endif // __GNUG__
+
 void operator delete(void* p, size_t size) throw() {
   fatal("Should not call global sized delete");
 }
@@ -96,5 +102,9 @@ void operator delete(void* p, size_t size) throw() {
 void operator delete [](void* p, size_t size) throw() {
   fatal("Should not call global sized delete []");
 }
+
+#ifdef __GNUG__
+PRAGMA_DIAG_POP
+#endif // __GNUG__
 
 #endif // Non-product
